修改ConfigManager